infra/k8s/prophet-core-catalog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prophet-core-catalog
spec:
  selector:
    app: prophet-core-catalog
  ports:
    - name: http
      port: 8830
      targetPort: 8830
